# Copyright 2023 TerraPower, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#######################################################################
#                        GENERAL PYTHON CONFIG                        #
#######################################################################
[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "armi"
version = "0.6.4"
description = "An open-source nuclear reactor analysis automation framework that helps design teams increase efficiency and quality."
license = {file = "LICENSE.md"}
requires-python = ">3.8"
readme = "README.rst"
authors = [
    { name="TerraPower, LLC", email="armi-devs@terrapower.com" },
]
dependencies = [
    "coverage>=7.2.0", # Code coverage tool. Sadly baked into every Case.
    "h5py>=3.0,<=3.9 ; python_version < '3.11.0'",
    "h5py>=3.9 ; python_version >= '3.11.0'", # Needed because our database files are H5 format
    "matplotlib>=3.5.3,<3.8.0 ; python_version < '3.11.0'",
    "matplotlib>=3.5.3 ; python_version >= '3.11.0'", # Important plotting library
    "numpy>=1.21", # Important math library
    "ordered-set>=3.1.1", # A useful data structure
    "pluggy>=1.2.0", # Central tool behind the ARMI Plugin system
    "pyevtk>=1.2.0", # Handles binary VTK visualization files
    "ruamel.yaml>=0.19.1 ; python_version >= '3.11.0'", # Our foundational YAML library
    "ruamel.yaml<=0.17.21 ; python_version < '3.11.0'", # Our foundational YAML library
    "scipy>=1.7.0", # Used for curve-fitting and matrix math
    "sympy>=1.14", # Used to represent mathematical curves for material properties
    "toml>0.9.5", # Needed to parse the pyproject.toml file
    "voluptuous>=0.12.1", # Used to validate YAML data files
    "yamlize==0.7.1", # Custom YAML-to-object library
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://terrapower.github.io/armi/"
Documentation = "https://terrapower.github.io/armi"
Changelog = "https://github.com/terrapower/armi/releases"
Repository = "https://github.com/terrapower/armi"
"Bug Tracker" = "https://github.com/terrapower/armi/issues"

[project.optional-dependencies]
grids = ["wxpython==4.2.1"]
memprof = ["psutil"]
mpi = ["mpi4py"]
test = [
    "ipykernel>=6.0.0", # IPython Kernel (We run test notebooks from the doc tutorials.)
    "jupyter_client>=7.0.0", # Reference implementation of the Jupyter protocol
    "nbconvert>=7.0.0", # Converting Jupyter Notebooks to other formats
    "nbformat>=5.5.0", # Jupyter Notebook reader
    "pytest-cov>=4.0.0", # coverage plugin
    "pytest-xdist>=3.0.0", # To spread our tests over multiple CPUs
    "pytest>=7.0.0", # Our primary test tooling
    "ruff==0.9.7", # Linting and code formatting (version-pinned)
]
docs = [
######################################################################################
# These are most specified that usual, because Sphinx docs seem to be quite fragile. #
#                                                                                    #
# Officially, we build our docs with Python 3.13.                                    #
######################################################################################
    "docutils==0.21.2", # Needed by sphinx-rtd-them
    "ipykernel>=6.0.0", # iPython kernel to run Jupyter notebooks
    "Jinja2==3.1.5", # Used in numpydoc and nbconvert
    "nbsphinx-link==1.3.1", # Adds Jupyter NBs to Sphinx source root
    "nbsphinx==0.9.6", # Parses Jupyter notebooks
    "pandoc", # Must be in the path (to convert file formats)
    "pylint", # Generates UML diagrams
    "pypdf==5.3.1", # Generating a single PDF file for the Sphinx documentation
    "setuptools",  # needed for conf.py tooling
    "sphinx-data-viewer==0.1.5",
    "sphinx-gallery==0.13.0", # Builds an HTML version of a Python script and puts it into a gallery
    "sphinx-needs==4.2.0", # Requirements traceability matrices for QA
    "sphinx-rtd-theme==3.0.2", # Read-The-Docs theme for Sphinx
    "sphinx-test-reports==1.1.0", # sphinx-needs test reports in the STR
    "Sphinx==7.4.7", # central library used to build our docs
    "sphinxcontrib-apidoc==0.5.0", # More easily document our API
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1", # Handle missing jquery errors
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-plantuml==0.30", # UML support in sphinx-needs
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sphinxext-opengraph==0.9.1", # Generates OpenGraph metadata to make cards for social media
    "unittest-xml-reporting==3.2.0", # Allows us to generate junit XML test reports
]

[project.scripts]
armi = "armi.__main__:main"

[tool.setuptools.packages]
find = {}


#######################################################################
#                             RUFF CONFIG                             #
#######################################################################
[tool.ruff]
# This is the exact version of Ruff we use.
required-version = "0.9.7"

# Assume Python 3.13
target-version = "py313"

# Setting line-length to 120
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "doc/tutorials/armi-example-app",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable pycodestyle (E) and Pyflakes (F) codes by default.
# D - NumPy docstring rules
# I - Sorting imports
# N801 - Class name should use CapWords convention
# SIM - code simplification rules
# TID - tidy imports
select = ["D", "E", "F", "I", "N801", "SIM", "TID"]

# Ruff rules we ignore (for now) because they are not 100% automatable
#
# D100 - Missing docstring in public module
# D101 - Missing docstring in public class
# D102 - Missing docstring in public method
# D103 - Missing docstring in public function
# D106 - Missing docstring in public nested class
# D401 - First line of docstring should be in imperative mood
# D404 - First word of the docstring should not be "This"
# SIM102 - Use a single if statement instead of nested if statements
# SIM105 - Use contextlib.suppress({exception}) instead of try-except-pass
# SIM108 - Use ternary operator {contents} instead of if-else-block
# SIM114 - Combine if branches using logical or operator
# SIM115 - Use context handler for opening files
# SIM117 - Use a single with statement with multiple contexts instead of nested with statements

# Ruff rules we ignore because we don't want them
#
# D105 - we don't need to document well-known magic methods
# D205 - 1 blank line required between summary line and description
# E731 - we can use lambdas however we want
# RUF100 - no unused noqa statements (not consistent enough yet)
# SIM118 - this does not work where we overload the .keys() method
#
ignore = ["D100", "D101", "D102", "D103", "D105", "D106", "D205", "D401", "D404", "E731", "RUF100", "SIM102", "SIM105", "SIM108", "SIM114", "SIM115", "SIM117", "SIM118"]

[tool.ruff.lint.per-file-ignores]
# D1XX - enforces writing docstrings
# E741 - ambiguous variable name
# N - We have our own naming conventions for unit tests.
# SLF001 - private member access
"*/tests/*" = ["D1", "E741", "N", "SLF001"]
"doc/gallery-src/*" = ["D400"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120


#######################################################################
#                            PYTEST CONFIG                            #
#######################################################################
[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "nothing matches this pattern"
addopts = "--durations=30 --tb=native"
filterwarnings = [
    "ignore: the matrix subclass is not the recommended way:PendingDeprecationWarning",
]

[tool.coverage.run]
exclude_also = [
    "armi/cli/gridGui.py",
    "armi/utils/gridEditor.py",
    "armi/utils/tests/test_gridGui.py",
    "venv/",
    ]
source = ["armi"]
parallel = true
# Change default .coverage file to something that doesn't have a dot because some Windows services can't handle dots.
data_file = "coverage_results.cov"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
omit = [
    "*/tests/*",
    "armi/cli/gridGui.py",
    "armi/utils/gridEditor.py",
    ]

exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",

    # Don't complain about missing type checking-only code:
    "if TYPE_CHECKING",

    # Don't complain if tests don't hit defensive assertion code:
    "except ImportError",
    "pass",
    "raise AssertionError",
    "raise KeyboardInterrupt",
    "raise NotImplementedError",
    ]

ignore_errors = true


#######################################################################
#              DATA FILES TO BE INCLUDED WITH THE PROJECT             #
#######################################################################
[tool.setuptools.package-data]
armi = [
    "bookkeeping/tests/armiRun-A0032-aHist-ref.txt",
    "matProps/dataSchema/dataSchema.json",
    "matProps/dataSchema/tests/inputs/*.yaml",
    "matProps/tests/invalidTestFiles/*",
    "matProps/tests/testDir1/*",
    "matProps/tests/testDir2/*",
    "matProps/tests/testDir3/*",
    "matProps/tests/testDir4/*",
    "matProps/tests/testMaterialsData/*",
    "nuclearDataIO/cccc/tests/fixtures/labels.ascii",
    "nuclearDataIO/cccc/tests/fixtures/labels.binary",
    "nuclearDataIO/cccc/tests/fixtures/mc2v3.dlayxs",
    "nuclearDataIO/cccc/tests/fixtures/simple_cartesian.pwdint",
    "nuclearDataIO/cccc/tests/fixtures/simple_cartesian.rtflux",
    "nuclearDataIO/cccc/tests/fixtures/simple_cartesian.rzflux",
    "nuclearDataIO/cccc/tests/fixtures/simple_hexz.dif3d",
    "nuclearDataIO/cccc/tests/fixtures/simple_hexz.geodst",
    "nuclearDataIO/cccc/tests/fixtures/simple_hexz.nhflux",
    "nuclearDataIO/tests/fixtures/AA.gamiso",
    "nuclearDataIO/tests/fixtures/AA.pmatrx",
    "nuclearDataIO/tests/fixtures/AB.gamiso",
    "nuclearDataIO/tests/fixtures/AB.pmatrx",
    "nuclearDataIO/tests/fixtures/combined-AA-AB.gamiso",
    "nuclearDataIO/tests/fixtures/combined-AA-AB.isotxs",
    "nuclearDataIO/tests/fixtures/combined-AA-AB.pmatrx",
    "nuclearDataIO/tests/fixtures/combined-and-lumped-AA-AB.gamiso",
    "nuclearDataIO/tests/fixtures/combined-and-lumped-AA-AB.isotxs",
    "nuclearDataIO/tests/fixtures/combined-and-lumped-AA-AB.pmatrx",
    "nuclearDataIO/tests/fixtures/ISOAA",
    "nuclearDataIO/tests/fixtures/ISOAB",
    "nuclearDataIO/tests/fixtures/mc2v3-AA.flux_ufg",
    "nuclearDataIO/tests/fixtures/mc2v3-AA.gamiso",
    "nuclearDataIO/tests/fixtures/mc2v3-AA.isotxs",
    "nuclearDataIO/tests/fixtures/mc2v3-AA.pmatrx",
    "nuclearDataIO/tests/fixtures/mc2v3-AB.gamiso",
    "nuclearDataIO/tests/fixtures/mc2v3-AB.isotxs",
    "nuclearDataIO/tests/fixtures/mc2v3-AB.pmatrx",
    "nuclearDataIO/tests/library-file-generation",
    "nuclearDataIO/tests/library-file-generation/combine-AA-AB.inp",
    "nuclearDataIO/tests/library-file-generation/combine-and-lump-AA-AB.inp",
    "nuclearDataIO/tests/library-file-generation/mc2v2-dlayxs.inp",
    "nuclearDataIO/tests/library-file-generation/mc2v3-AA.inp",
    "nuclearDataIO/tests/library-file-generation/mc2v3-AB.inp",
    "nuclearDataIO/tests/library-file-generation/mc2v3-dlayxs.inp",
    "nuclearDataIO/tests/simple_hexz.inp",
    "physics/neutronics/tests/ISOXA",
    "physics/neutronics/tests/rzmflxYA",
    "resources/burn-chain.yaml",
    "resources/elements.dat",
    "resources/mcc-nuclides.yaml",
    "resources/nuclides.dat",
    "resources/referenceFissionProducts.dat",
    "testing/reactors/anl-afci-177/anl-afci-177-blueprints.yaml",
    "testing/reactors/anl-afci-177/anl-afci-177-coreMap.yaml",
    "testing/reactors/anl-afci-177/anl-afci-177-fuelManagement.py",
    "testing/reactors/anl-afci-177/anl-afci-177.yaml",
    "testing/reactors/c5g7/c5g7-blueprints.yaml",
    "testing/reactors/c5g7/c5g7-settings.yaml",
    "testing/reactors/godiva/godiva-blueprints.yaml",
    "testing/reactors/godiva/godiva.armi.unittest.yaml",
    "testing/reactors/smallHexReactor/smallHexReactor-bp.yaml",
    "testing/reactors/smallHexReactor/smallHexReactor.yaml",
    "testing/resources/armiRun-SHUFFLES.txt",
    "testing/resources/armiRun-SHUFFLES.yaml",
    "testing/resources/COMPXS.ascii",
    "tests/1DslabXSByCompTest.yaml",
    "tests/armiRun.yaml",
    "tests/detailedAxialExpansion/armiRun.yaml",
    "tests/detailedAxialExpansion/refSmallCoreGrid.yaml",
    "tests/detailedAxialExpansion/refSmallReactor.yaml",
    "tests/detailedAxialExpansion/refSmallReactorBase.yaml",
    "tests/ISOAA",
    "tests/refSmallCartesian.yaml",
    "tests/refSmallCoreGrid.yaml",
    "tests/refSmallReactor.yaml",
    "tests/refSmallReactorBase.yaml",
    "tests/refSmallSfpGrid.yaml",
    "tests/refTestCartesian.yaml",
    "tests/smallestTestReactor/armiRunSmallest.yaml",
    "tests/smallestTestReactor/refOneBlockReactor.yaml",
    "tests/smallestTestReactor/refSmallestReactor.yaml",
    "tests/tutorials",
    "tests/tutorials/data_model.ipynb",
    "tests/zpprTest.yaml",
    "tests/zpprTestGeom.yaml",
]
