# Copyright 2016 TerraPower, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#######################################################################
#                        GENERAL PYTHON CONFIG                        #
#######################################################################
[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "matProps"
version = "3.0.0"
description = "A material library for scientific modeling, where YAML data can be loaded into Python objects."
license = "Apache License Version 2.0"
requires-python = ">3.8"
readme = "README.rst"
authors = [
    { name="TerraPower, LLC", email="armi-devs@terrapower.com" },
]
dependencies = [
    "jsonschema",
    "ruamel.yaml ; python_version >= '3.11.0'", # Our foundational YAML library
    "ruamel.yaml.clib ; python_version >= '3.11.0'", # C-based core of ruamel below
    "ruamel.yaml.clib<=0.2.7 ; python_version < '3.11.0'", # C-based core of ruamel below
    "ruamel.yaml<=0.17.21 ; python_version < '3.11.0'", # Our foundational YAML library
    "sympy>=1.14"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://terrapower.github.io/armi/"
Documentation = "https://terrapower.github.io/armi"  # TODO
Changelog = "https://github.com/terrapower/armi/releases"  # TODO
Repository = "https://github.com/terrapower/armi"
"Bug Tracker" = "https://github.com/terrapower/armi/issues"

[project.optional-dependencies]
test = [
    "numpy>=1.11.3",
    "scipy>=1.1.0",
    "pytest-xdist>=3.0.0", # To spread our tests over multiple CPUs
    "pytest>=7.0.0", # Our primary test tooling
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "matProps",
    "matProps.*",
    "matProps.dataSchema",
    "matProps.dataSchema.*",
]


#######################################################################
#                            PYTEST CONFIG                            #
#######################################################################
[tool.pytest.ini_options]
python_files = "test_*.py"


#######################################################################
#              DATA FILES TO BE INCLUDED WITH THE PROJECT             #
#######################################################################
[tool.setuptools.package-data]
mat_props = [
    "dataSchema/dataSchema.json",
    "dataSchema/tests/inputs/*.yaml",
    "tests/invalidTestFiles/*",
    "tests/testDir1/*",
    "tests/testDir2/*",
    "tests/testDir3/*",
    "tests/testDir4/*",
    "tests/testMaterialsData/*",
]
